--- a/sign_up.html
+++ b/sign_up.html
@@ -15,13 +15,13 @@
     <div class="caixa-cinza">
         <div class="formulario">
             <form action="#" method="post"> 
-                <label class="Nome" for="Nome">Nome:</label>
+                <label class="Nome" for="Nome">* Nome:</label>
                 <input type="Nome" id="Nome" name="Nome"><br><br>              
-                <label class="email" for="email">Email:</label>
+                <label class="email" for="email">* Email:</label>
                 <input type="email" id="email" name="email"><br><br>
-                <label for="Password">Password:</label>
+                <label for="Password">* Password:</label>
                 <input type="password" id="password" name="password"><br><br>
-                <label for="Password">Re-type password:</label>
+                <label for="Password">*Re-type password:</label>
                 <input type="password" id="confirm-password" name="confirm-password"><br><br>
                 <p></p>
                 <p></p>
