--- a/forgot.html
+++ b/forgot.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Forgot</title>
     <link rel="stylesheet" href="estilo_forgot.css">
 </head>
 <body>
-    <input type="button" class="voltar" value="<Back" onclick="window.location.href='projeto.html'"> 
+    <input type="button" class="custom-button" value="< Back" onclick="window.location.href='projeto.html'"> 
+    <h1>
+        Login
+    </h1>
     <h2>
         <div class="caixa-cinza">
             <div class="formulario">
