--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilo_login.css">
 </head>
 <body>
-    <input type="button" class="voltar" value="< Back" onclick="window.location.href='projeto.html'"> 
+    <input type="button" class="custom-button" value="< Back" onclick="window.location.href='projeto.html'"> 
     <h1>
         Login
     </h1>
@@ -20,7 +20,7 @@
                 <label for="Password">Password:</label>
                 <input type="password" id="password" name="password"><br><br>
                 <input type="button" value="Login">
-                <a href="forgot_password.html" class="link" title="Forgot Password?">Forgot Password?</a>
+                <a href="#" title="Forgot password?" onclick="window.location.href='forgot.html';">Forgot password?</a>
             </form>
         </div>
         <footer>
