--- a/sign_up.html
+++ b/sign_up.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilo_sign_up.css">
 </head>
 <body>
-    <input type="button" class="voltar" value="<Back" onclick="window.location.href='login.html'"> 
+    <input type="button" class="custom-button" value="<Back" onclick="window.location.href='login.html'"> 
     <h1>
         Sign Up
     </h1>
@@ -15,23 +15,19 @@
     <div class="caixa-cinza">
         <div class="formulario">
             <form action="#" method="post"> 
-                <label class="Nome" for="Nome">* Nome:</label>
+                <label class="Nome" for="Nome">* Nome: </label>
                 <input type="Nome" id="Nome" name="Nome"><br><br>              
-                <label class="email" for="email">* Email:</label>
+                <label class="email" for="email">* Email: </label>
                 <input type="email" id="email" name="email"><br><br>
-                <label for="Password">* Password:</label>
-                <input type="password" id="password" name="password"><br><br>
-                <label for="Password">*Re-type password:</label>
+                <label for="Password">* Password: </label>
+                <input type="password" id="password" name="password"><br><br>  
+                <label for="Password">* Re-type password: </label> 
                 <input type="password" id="confirm-password" name="confirm-password"><br><br>
                 <p></p>
                 <p></p>
-                <div class="quadradinho">
-                    &#10006;
-                  </div>
-                  <span class="texto">I agree to the Terms of use and Privacy Policy</span>
-                    <p></p> 
-                  <input type="button" value="Sign Up">
-                <input type="button" value="Login" onclick="window.location.href='login.html';">
+            <input type="checkbox" id="terms" name="terms" value="terms">I agree to the <a href="">Terms of Use</a> and <a href="">Privacy Policy</a>
+                  <br><br><input type="button" value="Sign Up">
+                  <a href="" title="Learn more" >Learn more</a>
             </form>
         </div>
         <footer>
