--- a/forgot.html
+++ b/forgot.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot</title>
-    <link rel="stylesheet" href="estilo_forgot.css">
+    <link rel="stylesheet" href="/styles/estilo_forgot.css">
 </head>
 <body>
     <input type="button" class="custom-button" value="< Back" onclick="window.location.href='projeto.html'"> 
