--- a/projeto.html
+++ b/projeto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo_projeto.css">
+    <link rel="stylesheet" href="/styles/estilo_projeto.css">
     <title>LAB 1- A Web Page </title>
 </head>
 <body>
