--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="estilo_login.css">
+    <link rel="stylesheet" href="/styles/estilo_login.css">
 </head>
 <body>
     <input type="button" class="custom-button" value="< Back" onclick="window.location.href='projeto.html'"> 
@@ -18,7 +18,8 @@
                 <label class="email" for="email">Email:</label>
                 <input type="email" id="email" name="email"><br><br>
                 <label for="Password">Password:</label>
-                <input type="password" id="password" name="password"><br><br>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" title="Enter your password" placeholder="Password"><br><br>
                 <input type="button" value="Login">
                 <a href="#" title="Forgot password?" onclick="window.location.href='forgot.html';">Forgot password?</a>
             </form>
