--- a/forgot.html
+++ b/forgot.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/styles/estilo_forgot.css">
 </head>
 <body>
-    <input type="button" class="custom-button" value="< Back" onclick="window.location.href='projeto.html'"> 
+    <input type="button" class="custom-button" value="< Back" onclick="window.location.href='index.html'"> 
     <h1>
         Login
     </h1>
@@ -21,7 +21,7 @@
                 </form>
             </div>
             <footer>
-                <p>Copryght 2024 All rigths reserved by Eduardo Miguel Moreira Junqueira nº30241 ERSC 2 ano IPVC-ESTG                                                                                                                                                                                      </p>
+                <p>Copryght 2024 All rigths reserved by Eduardo Miguel Moreira Junqueira nº30241 ERSC 2  IPVC-ESTG                                                                                                                                                                                      </p>
             </footer>
         </div>
         </h2>
