--- a/sign_up.html
+++ b/sign_up.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/estilo_sign_up.css">
 </head>
 <body>
-    <input type="button" class="custom-button" value="<Back" onclick="window.location.href='login.html'"> 
+    <input type="button" class="custom-button" value="<Back" onclick="window.location.href='index.html'"> 
     <h1>
         Sign Up
     </h1>
@@ -15,26 +15,24 @@
     <div class="caixa-cinza">
         <div class="formulario">
             <form action="#" method="post"> 
-                <label class="Nome" for="Nome">* Nome: </label>
-                <input type="Nome" id="Nome" name="Nome"><br><br>              
+                <label class="Nome" for="Nome">* Name: </label>
+                <input type="Nome" id="Nome" name="Name"><br><br>              
                 <label class="email" for="email">* Email: </label>
                 <input type="email" id="email" name="email"><br><br>
                 <label for="Password">* Password: </label>
-                <label for="password">* Password: </label>
-                <input type="password" id="password" name="password" title="Enter your password" placeholder="Password"><br><br>  
+                <input type="password" id="password" name="password" title="Password" ><br><br>  
                 <label for="Password">* Re-type password: </label> 
-                <label for="confirm-password">* Confirm Password: </label>
                 <input type="password" id="confirm-password" name="confirm-password" title="Confirm your password" placeholder="Confirm Password"><br><br>
                 <p></p>
                 <p></p>
+                <input type="checkbox" id="terms" name="terms" value="terms">
             <label for="terms">I agree to the <a href="">Terms of Use</a> and <a href="">Privacy Policy</a></label>
-            <input type="checkbox" id="terms" name="terms" value="terms">
                   <br><br><input type="button" value="Sign Up">
                   <a href="" title="Learn more" >Learn more</a>
             </form>
         </div>
         <footer>
-            <p>Copryght 2024 All rigths reserved by Eduardo Miguel Moreira Junqueira nº30241 ERSC 2 ano IPVC-ESTG                                                                                                                                                                                      </p>
+            <p>Copryght 2024 All rigths reserved by Eduardo Miguel Moreira Junqueira nº30241 ERSC 2  IPVC-ESTG                                                                                                                                                                                      </p>
         </footer>
     </div>
     </h2>
