--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/styles/estilo_login.css">
 </head>
 <body>
-    <input type="button" class="custom-button" value="< Back" onclick="window.location.href='projeto.html'"> 
+    <input type="button" class="custom-button" value="< Back" onclick="window.location.href='index.html'"> 
     <h1>
         Login
     </h1>
@@ -18,14 +18,13 @@
                 <label class="email" for="email">Email:</label>
                 <input type="email" id="email" name="email"><br><br>
                 <label for="Password">Password:</label>
-                <label for="password">Password:</label>
                 <input type="password" id="password" name="password" title="Enter your password" placeholder="Password"><br><br>
                 <input type="button" value="Login">
                 <a href="#" title="Forgot password?" onclick="window.location.href='forgot.html';">Forgot password?</a>
             </form>
         </div>
         <footer>
-            <p>Copryght 2024 All rigths reserved by Eduardo Miguel Moreira Junqueira nº30241 ERSC 2 ano IPVC-ESTG                                                                                                                                                                                      </p>
+            <p>Copryght 2024 All rigths reserved by Eduardo Miguel Moreira Junqueira nº30241 ERSC  IPVC-ESTG                                                                                                                                                                                      </p>
         </footer>
 </div>
 </h2>
