--- a/sign_up.html
+++ b/sign_up.html
@@ -1,41 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles/estilo_sign_up.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap Sign_up</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles/index.css"> <!-- Importando o seu arquivo de estilo -->
 </head>
 <body>
-    <input type="button" class="custom-button" value="<Back" onclick="window.location.href='index.html'"> 
-    <h1>
-        Sign Up
-    </h1>
-    <h2>
-    <div class="caixa-cinza">
-        <div class="formulario">
-            <form action="#" method="post"> 
-                <label class="Nome" for="Nome">* Name: </label>
-                <input type="Nome" id="Nome" name="Name"><br><br>              
-                <label class="email" for="email">* Email: </label>
-                <input type="email" id="email" name="email"><br><br>
-                <label for="Password">* Password: </label>
-                <input type="password" id="password" name="password" title="Password" ><br><br>  
-                <label for="Password">* Re-type password: </label> 
-                <input type="password" id="confirm-password" name="confirm-password" title="Confirm your password" placeholder="Confirm Password"><br><br>
-                <p></p>
-                <p></p>
-                <input type="checkbox" id="terms" name="terms" value="terms">
-            <label for="terms">I agree to the <a href="">Terms of Use</a> and <a href="">Privacy Policy</a></label>
-                  <br><br><input type="button" value="Sign Up">
-                  <a href="" title="Learn more" >Learn more</a>
-            </form>
+<!--Back  -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <a href="index.html" class="btn btn-success">Back</a>
+      </div>                       
+      <!--Perfil  -->
+      <div class="col-md-6">
+          <br><br>
+          <h1>Login</h1>
         </div>
-        <footer>
-            <p>Copryght 2024 All rigths reserved by Eduardo Miguel Moreira Junqueira nº30241 ERSC 2  IPVC-ESTG                                                                                                                                                                                      </p>
-        </footer>
-    </div>
-    </h2>
-    
+         <!-- Nested Container -->
+         <div class="container">
+          <div class="row">
+              <!-- Profile Form -->
+              <div class="formulario bg-light">
+                  <!-- Profile Image -->
+        <img src="images/IMG-20230706-WA0001PerfilMac.jpeg"  class="center" width="250" title="Profile Picture">
+       <!--Form-->
+        <form action="#" method="post">        
+            <label for="email">Email:</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+          <div class="mb-3">
+            <label for="pwd">Password:</label>
+            <input type="password" class="form-control" id="password" placeholder="Enter password" name="password">
+          </div>
+          <div class="d-flex justify-content-center align-items-center">
+            <a href="index.html" class="btn btn-success">Login</a>
+        </div>
+        </form>
+  </div>
+</div>
+</div>
+</div>
+</div>
+      <footer>
+        <p>Copryght 2024 All rigths reserved by Eduardo Miguel Moreira Junqueira nº30241 ERSC 2 year IPVC-ESTG</p>
+      </footer>
+  
 </body>
 </html>
