--- a/forgot.html
+++ b/forgot.html
@@ -1,30 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot</title>
-    <link rel="stylesheet" href="/styles/estilo_forgot.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap forgot Password</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles/forgot.css"> <!-- Importando o seu arquivo de estilo -->
 </head>
 <body>
-    <input type="button" class="custom-button" value="< Back" onclick="window.location.href='index.html'"> 
-    <h1>
-        Login
-    </h1>
-    <h2>
-        <div class="caixa-cinza">
-            <div class="formulario">
-                <form action="#" method="post"> 
-                    <label class="email" for="email">Email:</label>
-                    <input type="email" id="email" name="email"><br><br>
-                    <input type="button" value="Get new password">
-                </form>
-            </div>
-            <footer>
-                <p>Copryght 2024 All rigths reserved by Eduardo Miguel Moreira Junqueira nº30241 ERSC 2  IPVC-ESTG                                                                                                                                                                                      </p>
-            </footer>
+<!--Back  -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <a href="index.html" class="btn btn-success">Back</a>
+      </div>                       
+      <!--Perfil  -->
+      <div class="col-md-6">
+          <br><br>
+          <h1>Forgot Password</h1>
         </div>
-        </h2>
-    
+         <!-- Nested Container -->
+         <div class="container">
+          <div class="row">
+              <!-- Profile Form -->
+              <div class="formulario bg-light">
+                  <!-- Profile Image -->
+        <img src="images/Logo 400x400 do Twitter.jpg"  class="center" width="250" title="Profile Picture">
+       <!--Form-->
+        <form action="#" method="post"> 
+            <br>
+            <label for="pwd">Email:</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+            <br>
+          <div class="d-flex justify-content-center align-items-center">
+            <a href="register.html" class="btn btn-success">Get new password</a>
+        </div>
+        </form>
+  </div>
+</div>
+</div>
+</div>
+</div>
+
+      <footer>
+        <p>Copryght 2024 All rigths reserved by Eduardo Miguel Moreira Junqueira nº30241 ERSC 2 year IPVC-ESTG</p>
+      </footer>
+  
 </body>
 </html>
