--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap Sign_up</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles/index.css"> <!-- Importando o seu arquivo de estilo -->
+  <link rel="stylesheet" href="styles/register.css"> <!-- Importando o seu arquivo de estilo -->
 </head>
 <body>
 <!--Back  -->
@@ -17,7 +17,7 @@
       <!--Perfil  -->
       <div class="col-md-6">
           <br><br>
-          <h1>Login</h1>
+          <h1>Sign Up</h1>
         </div>
          <!-- Nested Container -->
          <div class="container">
@@ -25,7 +25,7 @@
               <!-- Profile Form -->
               <div class="formulario bg-light">
                   <!-- Profile Image -->
-        <img src="images/IMG-20230706-WA0001PerfilMac.jpeg"  class="center" width="250" title="Profile Picture">
+        <img src="images/Logo 400x400 do Twitter.jpg"  class="center" width="250" title="Profile Picture">
        <!--Form-->
         <form action="#" method="post">        
             <label for="email">Email:</label>
@@ -34,8 +34,13 @@
             <label for="pwd">Password:</label>
             <input type="password" class="form-control" id="password" placeholder="Enter password" name="password">
           </div>
+          <div class="mb-3">
+            <label for="pwd">Re-type password:</label>
+            <input type="password" class="form-control" id="password1" placeholder="Enter password" name="password">
+          </div>
+          <input type="checkbox" id="terms" name="terms" value="terms">   I agree to the Terms of Use and Privacy Policy
           <div class="d-flex justify-content-center align-items-center">
-            <a href="index.html" class="btn btn-success">Login</a>
+            <a href="login.html" class="btn btn-success">Sign up</a> 
         </div>
         </form>
   </div>
